fixed alignment issue of the carousel overshooting side width

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -1,11 +1,9 @@
 .react-multi-carousel-list {
   width: 100%;
-  /* margin-left: -6rem; */
 }
 
 #Landing__Products {
   background-color: var(--color--layout-dark);
-  padding: 3rem;
   color: var(--color--text-default);
 }
 
@@ -25,7 +23,6 @@
 }
 
 .product__card {
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
   max-width: 420px;
   margin: 4rem 2rem;
   text-align: left;
